--- a/_posts/2018-06-30-dreamer.md
+++ b/_posts/2018-06-30-dreamer.md
@@ -2,7 +2,7 @@
 layout: post
 title: "程序员中的梦想家"
 subtitle: "Dreamers among programmers"
-author: "Hux"
+author: "fsoooo"
 header-img: "img/post-bg-dreamer.jpg"
 header-mask: 0.4
 tags:
@@ -10,7 +10,6 @@ tags:
   - 生活
 ---
 
-> 本文首发于我的知乎专栏 [The Little Programmer](https://zhuanlan.zhihu.com/p/38722466)，转载请保留链接 ;)
 
 有一类程序员是 visionary 型的，为了实现一些超前的 idea，绕过某些技术的限制，他们写的 code 晦涩高深得只有他们自己能懂，做出来的 tool 看上去很美好结果处处是坑出了 bug 根本没法查，但正是这类人不断创造出新的东西，在洗礼之后成为一个个 big thing。
 
