--- a/_posts/2019-04-17-西南联大为何让人热泪盈眶.md
+++ b/_posts/2019-04-17-西南联大为何让人热泪盈眶.md
@@ -1,4 +1,15 @@
 
+---
+layout: post
+title: "西南联大为何让人热泪盈眶"
+subtitle: ""
+author: "fsoooo"
+header-img: "img/post-bg-dreamer.jpg"
+header-mask: 0.4
+tags:
+  - 历史
+  - 随笔
+---
 
 ![image](http://upload-images.jianshu.io/upload_images/6943526-f79acc68670d02c3.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
 
