--- a/_posts/2019-04-23-总有一句孤独的诗句，说到了你的心坎里.md
+++ b/_posts/2019-04-23-总有一句孤独的诗句，说到了你的心坎里.md
@@ -1,4 +1,18 @@
-## 总有一句孤独的古诗词，说到了你心坎里
+
+---
+layout: post
+title: "总有一句孤独的古诗词，说到了你心坎里"
+subtitle: ""
+author: "fsoooo"
+header-img: "img/post-bg-dreamer.jpg"
+header-mask: 0.4
+tags:
+  - 诗词
+  - 随笔
+  - 心情
+  - 生活
+---
+
 
 ![image](http://upload-images.jianshu.io/upload_images/6943526-f262809339d45099?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
 
