--- a/_posts/2019-04-19-圆明园写给圣母院的信.md
+++ b/_posts/2019-04-19-圆明园写给圣母院的信.md
@@ -1,3 +1,19 @@
+---
+layout: post
+title: "圆明园写给圣母院的信"
+subtitle: "文明不能承受之殇"
+date: 2019-04-19 
+author: "fsoooo"
+header-img: "img/post-bg-dreamer.jpg"
+header-mask: 0.4
+catalog: true
+tags:
+  - 历史
+  - 随笔
+  - 心情
+  - 转载
+---
+
 >编 辑 | 魏晨旭   校 审 | 张  妍  校 对 | 白琼瑜
 来源 |  中国青年报、@圆明园遗址公园、@人民日报、网友留言
 
