--- a/_posts/2019-04-23-总有一句孤独的诗句，说到了你的心坎里.md
+++ b/_posts/2019-04-23-总有一句孤独的诗句，说到了你的心坎里.md
@@ -1,11 +1,12 @@
-
 ---
 layout: post
 title: "总有一句孤独的古诗词，说到了你心坎里"
-subtitle: ""
+subtitle: "孤独时，读诗词~"
+date: 2019-04-23 
 author: "fsoooo"
 header-img: "img/post-bg-dreamer.jpg"
 header-mask: 0.4
+catalog: true
 tags:
   - 诗词
   - 随笔
