--- a/_posts/2019-04-18-有哪些让你惊艳到的名字？.md
+++ b/_posts/2019-04-18-有哪些让你惊艳到的名字？.md
@@ -1,4 +1,13 @@
-
+---
+layout: post
+title: "有哪些让你惊艳的名字"
+subtitle: "月白是什么颜色？"
+author: "fsoooo"
+tags:
+  - 知乎
+  - 随笔
+  - 国学
+---
 最近在知乎上看到这个问题下的回复，说的是古人给各种颜色取的名字。细细体会，越发感觉中华民族的文化底蕴之深。
 
 ![](http://upload-images.jianshu.io/upload_images/6943526-3d04ae6fea31f4df.jpg?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
