--- a/_posts/2019-04-15-十六岁的烟花.md
+++ b/_posts/2019-04-15-十六岁的烟花.md
@@ -1,3 +1,16 @@
+---
+layout: post
+title: "十六岁的烟花"
+subtitle: "一场暗恋，一百年~"
+date: 2019-04-17 
+author: "fsoooo"
+catalog: true
+tags:
+  - 情感
+  - 随笔
+  - 金庸
+---
+
 文章转载自简书用户  **【[醉里挑灯_观人观己](https://www.jianshu.com/u/c68346a4e772)】**
 ##一场暗恋，一百年
 
