--- a/_posts/2019-04-16-文化的含义.md
+++ b/_posts/2019-04-16-文化的含义.md
@@ -1,3 +1,16 @@
+---
+layout: post
+title: "文化的含义"
+subtitle: ""
+date: 2019-04-24 
+author: "fsoooo"
+catalog: true
+tags:
+  - 知乎
+  - 随笔
+  - 读书
+---
+
 从知乎上看到一个关于文化的解读，在这里分享给大家。
 “文化”可以用四句话表达：
 植根于内心的修养；
