--- a/_posts/2019-04-11-如果把中国所有的皇帝放在一个聊天群里,他们会聊些什么-.md
+++ b/_posts/2019-04-11-如果把中国所有的皇帝放在一个聊天群里,他们会聊些什么-.md
@@ -1,3 +1,16 @@
+---
+layout: post
+title: "如果把中国所有的皇帝放在一个聊天群里,他们会聊些什么"
+subtitle: "开国皇帝遇到亡国之君会说些什么？"
+date: 2019-04-14 
+author: "fsoooo"
+catalog: true
+tags:
+  - 历史
+  - 笑谈
+  - 随笔
+---
+
 > #### **群公告**
 >
 > 1.可以发文字，图片，表情，语音，视频，能够无障碍听说读写。
