--- a/_posts/2019-04-12-如果可以.md
+++ b/_posts/2019-04-12-如果可以.md
@@ -1,3 +1,16 @@
+---
+layout: post
+title: "如果可以~"
+subtitle: "如果可以，希望你做一个勇敢的人，披荆斩棘周游四海"
+date: 2019-04-12 
+author: "fsoooo"
+catalog: true
+tags:
+  - 诗词
+  - 文学
+  - 心情
+---
+
 如果可以，
 希望你做一个勇敢的人 ，
 披荆斩棘周游四海；
