--- a/_posts/2019-04-13-慎独，自律的最高境界.md
+++ b/_posts/2019-04-13-慎独，自律的最高境界.md
@@ -1,3 +1,15 @@
+---
+layout: post
+title: "慎独，自律的最高境界"
+subtitle: "莫见乎隐，莫显乎微，故君子慎其独也~"
+date: 2019-04-14 
+author: "fsoooo"
+catalog: true
+tags:
+  - 品格
+  - 随笔
+---
+
 “慎独”一词，出自秦汉之际儒家著作《礼记•中庸》一书：“**莫见乎隐，莫显乎微，故君子慎其独也**。”
 
 ![](https://upload-images.jianshu.io/upload_images/6943526-f5b94f3437b9a930.jpg?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
