--- a/_posts/2019-04-14-盛世崩塌，家国情怀，满纸血泪.md
+++ b/_posts/2019-04-14-盛世崩塌，家国情怀，满纸血泪.md
@@ -1,3 +1,15 @@
+---
+layout: post
+title: "盛世崩塌，家国情怀，满纸血泪"
+subtitle: "颜真卿在世也写不出的真迹~"
+date: 2019-04-14 
+author: "fsoooo"
+catalog: true
+tags:
+  - 历史
+  - 民族气节
+  - 随笔
+---
 
 近日，台北故宫博物院向日本出借颜真卿《祭侄文稿》，人民日报就此事发表评价：
 
