--- a/_posts/2019-04-16-文化的含义.md
+++ b/_posts/2019-04-16-文化的含义.md
@@ -12,11 +12,14 @@ tags:
 ---
 
 从知乎上看到一个关于文化的解读，在这里分享给大家。
-“文化”可以用四句话表达：
-植根于内心的修养；
-无需提醒的自觉；
-以约束为前提的自由；
-为别人着想的善良。
+
+<br/>
+>“文化”可以用四句话表达：
+>**植根于内心的修养；**
+>**无需提醒的自觉；**
+>**以约束为前提的自由；**
+>**为别人着想的善良。**
+<br/>
 
 根植于内心的修养，是指由来已久，深入骨髓的一个人的高尚品行。
 
