--- a/_posts/2019-04-17-西南联大为何让人热泪盈眶.md
+++ b/_posts/2019-04-17-西南联大为何让人热泪盈眶.md
@@ -3,6 +3,8 @@ layout: post
 title: "西南联大为何让人热泪盈眶"
 subtitle: "文化大转移"
 author: "fsoooo"
+header-img: "img/fighting.jpg"
+header-mask: 0.4
 tags:
   - 历史
   - 随笔
