--- a/_posts/2019-04-26-《绿皮书》像暖春，化的是雪，而且是积雪.md
+++ b/_posts/2019-04-26-《绿皮书》像暖春，化的是雪，而且是积雪.md
@@ -11,7 +11,7 @@ tags:
 ---
 ![image](http://upload-images.jianshu.io/upload_images/6943526-3b0c9f184a962308?imageMogr2/auto-orient/strip)
 
-![img](https://imgsrc.baidu.com/baike/pic/item/29381f30e924b899e88c810760061d950a7bf659.jpg)
+![img](http://upload-images.jianshu.io/upload_images/6943526-9317d8b4794b7044.jpg?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
 
 如果你只是听说过《绿皮书》，对它了解不深，或许很难理解观者的这份感动与推崇。
 
@@ -31,7 +31,8 @@ tags:
 
 **上映日期：3月1日**
 
-![img](https://imgsrc.baidu.com/baike/pic/item/1e30e924b899a9010e85a30913950a7b0208f559.jpg)
+![image.png](https://upload-images.jianshu.io/upload_images/6943526-b90955ec21f05476.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
+
 
 黄海设计的《绿皮书》中国版海报
 
@@ -55,7 +56,8 @@ tags:
 
 ### （一）
 
-![img](https://imgsrc.baidu.com/baike/pic/item/b21c8701a18b87d61dc85320090828381f30fd03.jpg)
+![image](http://upload-images.jianshu.io/upload_images/6943526-834345bb4f252132.jpg?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
+
 
 托尼·利普（维果·莫腾森 饰），一个性情粗暴、擅长嘴炮和拳脚的白人混混。
 
@@ -83,7 +85,8 @@ tags:
 
 于是，一桩桩连托尼都讶异的**差异对待**事件出现了。
 
-![img](https://imgsrc.baidu.com/baike/pic/item/b151f8198618367ae80387e220738bd4b31ce503.jpg)
+![image](http://upload-images.jianshu.io/upload_images/6943526-de273509a3a72813.jpg?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
+
 
 住宿，西装革履不差钱的唐有时只能住进简陋的有色人种旅馆；
 
@@ -93,7 +96,7 @@ tags:
 
 甚至，因为肤色，唐连夜间出行都要受到管制……
 
-![img](https://imgsrc.baidu.com/baike/pic/item/a08b87d6277f9e2f3b85e5371130e924b899f359.jpg)
+![img](http://upload-images.jianshu.io/upload_images/6943526-490e717b6109be68.jpg?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
 
 一个人生活最基本的衣食住行处处受限制，难受与难堪可想而知。
 
@@ -125,7 +128,9 @@ tags:
 
 心存善意，可说出口的话却充满偏见。
 
-![img](https://imgsrc.baidu.com/baike/pic/item/8b13632762d0f703c3386de306fa513d2697c503.jpg)
+![image.png](https://upload-images.jianshu.io/upload_images/6943526-f0a6d5c515413a8c.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
+
+
 
 再看唐·谢利。
 
@@ -163,7 +168,8 @@ tags:
 
 这是影片的**第二层**。
 
-![img](https://imgsrc.baidu.com/baike/pic/item/eac4b74543a98226eb86d3188482b9014a90eb4e.jpg)
+![image](http://upload-images.jianshu.io/upload_images/6943526-c934e8fac9fa5956.jpg?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
+
 
 一块小小的石头，折射出人性的脆弱与瑕疵。
 
@@ -187,7 +193,7 @@ tags:
 
 **“成为一个天才还不够，还要有勇气去改变人心。”**
 
-![img](https://imgsrc.baidu.com/baike/pic/item/63d0f703918fa0ec5c669c32289759ee3d6ddb68.jpg)
+![img](http://upload-images.jianshu.io/upload_images/6943526-3337d124d0505715.jpg?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
 
 
 
@@ -217,7 +223,9 @@ tags:
 
 令人愤慨，又让人心疼。
 
-![img](https://imgsrc.baidu.com/baike/pic/item/b90e7bec54e736d18973743795504fc2d56269a9.jpg)
+![image.png](https://upload-images.jianshu.io/upload_images/6943526-12e45b3d7f794fe5.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
+
+
 
 如果说唐的对抗是「硬」方式的话，那么托尼打破偏见的方式恰恰相反——柔软的**接纳**。
 
@@ -241,7 +249,7 @@ tags:
 
 终于，尽管经过种种试探和怀疑，两个人都迈出了第一步，这才让曾经孤独的灵魂越靠越近，心灵的飞鸟救赎了孤岛。
 
-![img](https://imgsrc.baidu.com/baike/pic/item/10dfa9ec8a13632732673a0c9f8fa0ec08fac703.jpg)
+![img](http://upload-images.jianshu.io/upload_images/6943526-a1382d8f6192f6f5.jpg?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
 
 一气呵成，静水流深。
 
@@ -263,7 +271,8 @@ tags:
 
 甜度爆表！
 
-![img](https://imgsrc.baidu.com/baike/pic/item/faedab64034f78f0ec3d62cc77310a55b3191cde.jpg)
+![image](http://upload-images.jianshu.io/upload_images/6943526-11e77be5b7ca5d79.jpg?imageMogr2/auto-orient/strip)
+
 
 种种来自现实的小细节，让人物更丰满鲜活，也让影片更加人性化。
 
@@ -273,7 +282,8 @@ tags:
 
 这对比，堪称**换脸**。
 
-![img](https://imgsrc.baidu.com/baike/pic/item/4a36acaf2edda3cce184401f0fe93901213f92a9.jpg)
+![image](http://upload-images.jianshu.io/upload_images/6943526-c286475531487a58.jpg?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
+
 
 为了演出托尼的淳朴粗粝，60岁的“V叔”增重40斤，还变换了口音。
 
@@ -283,7 +293,9 @@ tags:
 
 这种高度敬业和高规格的业务能力，让阿里**二夺奥斯卡“最佳男配”**，当之无愧。
 
-![img](https://imgsrc.baidu.com/baike/pic/item/d01373f082025aafb10486f4f5edab64034f1ade.jpg)
+![image.png](https://upload-images.jianshu.io/upload_images/6943526-b400184e8917dce9.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
+
+
 
 通过两位演员的表演，观众能清晰看到一段从格格不入到惺惺相惜的友情的诞生，也看到两个不同的灵魂共同成长、互相治愈的过程。
 
@@ -295,7 +307,7 @@ tags:
 
 两人的距离感和阶层差异一目了然。
 
-![img](https://imgsrc.baidu.com/baike/pic/item/a50f4bfbfbedab641a44b5fff936afc379311ede.jpg)
+![img](http://upload-images.jianshu.io/upload_images/6943526-6c8f3f759ad16cc1.jpg?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
 
 而到了片尾，两人身处同一场圣诞晚宴。
 
@@ -307,7 +319,9 @@ tags:
 
 无论是坚硬地对抗还是柔软地接纳，无论拿起还是放下，只要肯迈出第一步，就可能是打破孤独甚至改变世界的重要一步。
 
-![img](https://imgsrc.baidu.com/baike/pic/item/6a63f6246b600c33e9c926f7144c510fd9f9a159.jpg)
+![image.png](https://upload-images.jianshu.io/upload_images/6943526-b591311088a013db.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
+
+
 
 很幸运能在这个乍暖还寒的日子看到《绿皮书》。
 
@@ -335,9 +349,9 @@ tags:
 
 再看这本指南里的内容，有着美国各地餐厅、旅馆的详细信息，之所以要加上“黑人”，是因为有些地方不欢迎有色人种。
 
-![img](https://imgsrc.baidu.com/baike/pic/item/838ba61ea8d3fd1f4f8700103e4e251f95ca5f09.jpg)
+![img](http://upload-images.jianshu.io/upload_images/6943526-b888f56243bc615c.jpg?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
 
-▲片中的绿皮书，也有原版可寻
+片中的绿皮书，也有原版可寻
 
 听起来挺魔幻，但这确实是一段真实存在的历史。
 
@@ -347,7 +361,7 @@ tags:
 
 就像电影里托尼雨天开车迷路，来到一个计划之外的城镇上，却被警察拦下告知，这里是日落城（种族隔离的一种形式），黑人晚上不能在这里逗留，然后警察开始万般刁难托尼和唐·谢利。
 
-![img](https://imgsrc.baidu.com/baike/pic/item/d009b3de9c82d158cf0cfb9b8e0a19d8bc3e4209.jpg)
+![img](http://upload-images.jianshu.io/upload_images/6943526-bbc52ab5556e1ee3.jpg?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
 
 绿皮书对黑人意味着什么？
 
@@ -355,33 +369,34 @@ tags:
 
 这也是为什么，托尼和他妻子德洛瑞丝在第一次知道有绿皮书这种东西时会如此惊讶，因为有着白皮肤的他们不能理解“被隔离”意味着不自由，甚至在出行时有生命危险。
 
-![img](https://imgsrc.baidu.com/baike/pic/item/11385343fbf2b2112c5f2764c48065380cd78ea3.jpg)
+![img](http://upload-images.jianshu.io/upload_images/6943526-781232270aaae9a3.jpg?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
 
 托尼第一次见到唐·谢利，是在**卡耐基音乐厅**的上面。
 
 这让托尼感到困惑，因为他以为Dr.Shirley是个医生（Doctor，一词多义），而卡耐基音乐厅，这个被公认为是全世界最伟大的音乐厅，则暗指了唐·谢利的真实身份——天才音乐家。
 
-![img](https://imgsrc.baidu.com/baike/pic/item/0dd7912397dda1446aafce98bcb7d0a20cf48672.jpg)
+![image](http://upload-images.jianshu.io/upload_images/6943526-ee08cbeb15ff39f1.jpg?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
+
 
 唐·谢利曾获得过音乐博士学位，这也是他Dr.Shirley名头的来源。
 
 如果你还记得中学历史课本里关于美国南北战争的部分，就不难理解为什么唐·谢利需要一个在南下过程中能为他解决麻烦的人。
 
-![img](https://imgsrc.baidu.com/baike/pic/item/77094b36acaf2edd7183ebc3831001e9390193ae.jpg)
+![img](http://upload-images.jianshu.io/upload_images/6943526-45b2995f5afc1b9c.jpg?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
 
 虽然南方战败，黑奴制被废除，但南方各州对黑人的种族歧视，依然严重。
 
 电影中，两人南下的交通工具是一辆水鸭色的凯迪拉克。
 
-![img](https://imgsrc.baidu.com/baike/pic/item/b151f8198618367ab239ddf720738bd4b31ce56c.jpg)
+![image.png](https://upload-images.jianshu.io/upload_images/6943526-2be2bfa892f180ae.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
+
 
 看着是不是挺眼熟？
 
 这款Sedan de Ville轿车，也曾出现在上届奥斯卡最佳影片《水形物语》中。毕竟一个发生在1962年，一个是1963年，时间相差不多。
 
-![img](https://imgsrc.baidu.com/baike/pic/item/00e93901213fb80ea2a3c3fd38d12f2eb93894ae.jpg)
+![《水形物语》剧照](http://upload-images.jianshu.io/upload_images/6943526-a78236cd7a68f03a.jpg?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
 
-▲《水形物语》剧照
 
 因为正值冬季，当片中出现雨雪天气时，托尼会拿着布擦前挡风玻璃。
 
@@ -391,7 +406,7 @@ tags:
 
 从后续对话中，可以得知帮助他们的是美国当时的司法部长**罗伯特·肯尼迪**，也就是时任美国总统约翰·肯尼迪的弟弟。
 
-![img](https://imgsrc.baidu.com/baike/pic/item/622762d0f703918f2a4a9ee05f3d269759eec405.jpg)
+![img](http://upload-images.jianshu.io/upload_images/6943526-beb8bd7eaa2d6bbf.jpg?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
 
 相比哥哥，这位肯尼迪也是一代风云人物，在和平解决古巴导弹危机和促进种族、黑人民权运动方面贡献良多。
 
@@ -405,7 +420,7 @@ tags:
 
 电影更多呈现的，**是肤色人种与人格灵魂的对位关系**。
 
-![img](https://imgsrc.baidu.com/baike/pic/item/f603918fa0ec08fadd9bb08d57ee3d6d55fbda05.jpg)
+![img](http://upload-images.jianshu.io/upload_images/6943526-59500d6d6ee3be6b.jpg?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
 
 
 
@@ -415,18 +430,8 @@ tags:
 
 本是俱乐部的小侍从，却仰仗着老板的威名，对不听话的客人下狠手。
 
-![img](https://imgsrc.baidu.com/baike/pic/item/8b13632762d0f703182936f606fa513d2697c505.jpg)
 
 通过监守自盗的把戏，成功结识黑社会大佬，搭建人脉关系。
-
-把车停在消防栓旁边，然后找个铁皮桶盖到消防栓上面。这是啥意思？
-
-![img](https://imgsrc.baidu.com/baike/pic/item/8601a18b87d6277fefa2901226381f30e924fc6c.jpg)
-
-看下面这张图，你就能明白为这种行为和占用应急车道同样恶劣。
-
-![img](https://imgsrc.baidu.com/baike/pic/item/472309f790529822e8a89ae9d9ca7bcb0a46d405.jpg)
-
 
 
 **马赫沙拉·阿里**饰演的唐·谢利则是一个独善其身的上流社会人士，只不过他是黑人。
@@ -441,7 +446,8 @@ tags:
 
 紧接着，唐·谢利身着一袭长袍，带着各种首饰，穿得像个非洲国王一样隆重登场。
 
-![img](https://imgsrc.baidu.com/baike/pic/item/203fb80e7bec54e7ed9eb834b7389b504fc26aae.jpg)
+![image.png](https://upload-images.jianshu.io/upload_images/6943526-c56cb758e185133c.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
+
 
 黑人穿得像黑人，乍看好像没毛病。
 
@@ -453,7 +459,7 @@ tags:
 
 第一个值得提起的冲突，是他们关于托尼姓氏的讨论。
 
-![img](https://imgsrc.baidu.com/baike/pic/item/54fbb2fb43166d22dbecb6be482309f79052d205.jpg)
+![img](http://upload-images.jianshu.io/upload_images/6943526-d20cf7cdd06ce1ee.jpg?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
 
 唐·谢利认为瓦莱隆加比较难读，利普又显得比较粗俗（lip可以翻译成嘴唇，代表托尼能说会道油嘴滑舌），想让他换成瓦莱，托尼却宁可不被介绍，也不换名字。
 
@@ -463,7 +469,7 @@ tags:
 
 在见识到唐·谢利高超的琴技后，托尼对他的看法有了进一步改观，渐渐跳出了雇佣关系的层面。
 
-![img](https://imgsrc.baidu.com/baike/pic/item/a08b87d6277f9e2f7585bf221130e924b899f36c.jpg)
+![img](http://upload-images.jianshu.io/upload_images/6943526-b53a7f7e17b5b80b.jpg?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
 
 在愈发轻松的闲聊中，托尼对唐·谢利有了更深入的了解。
 
@@ -473,7 +479,8 @@ tags:
 
 面对质疑，唐·谢利却只有以沉默作答，从小接受白人音乐教育，并且只为上流社会白人演奏的他，从没想过有一天会遭受这种带有歧视意味的质问。
 
-![img](https://imgsrc.baidu.com/baike/pic/item/b3fb43166d224f4ab502d03907f790529822d105.jpg)
+![image.png](https://upload-images.jianshu.io/upload_images/6943526-3b0cb98266cda502.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
+
 
 在进入肯塔基州后，电影中最有趣的一幕出现了。
 
@@ -489,7 +496,7 @@ tags:
 
 随着时间推移，在白人眼里就形成了黑人喜欢吃炸鸡的刻板印象。
 
-![img](https://imgsrc.baidu.com/baike/pic/item/4ec2d5628535e5dd045d07f578c6a7efce1b62a3.jpg)
+![img](http://upload-images.jianshu.io/upload_images/6943526-7af22772611ea158.jpg?imageMogr2/auto-orient/strip)
 
 黑人与炸鸡两个词，背后是一个种族的血泪史。
 
@@ -499,7 +506,8 @@ tags:
 
 唐·谢利三重奏来到这里演出，这里的白人老头却用炸鸡招待唐·谢利。他们不会问黑人想吃什么，**这背后的逻辑是，反正天底下的黑人都一样**。
 
-![img](https://imgsrc.baidu.com/baike/pic/item/7dd98d1001e93901f6732f1475ec54e736d196a3.jpg)
+![image.png](https://upload-images.jianshu.io/upload_images/6943526-0675bef577e0dfc8.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
+
 
 唐·谢利在南下的一路上，遇到许多不公正待遇。
 
@@ -509,7 +517,7 @@ tags:
 
 **他的方法是，把自己变得更像白人，自尊以求获得尊重**。
 
-![img](https://imgsrc.baidu.com/baike/pic/item/9e3df8dcd100baa1d2a2e5914910b912c8fc2e09.jpg)
+![img](http://upload-images.jianshu.io/upload_images/6943526-85fef18b4389f9bd.jpg?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
 
 在这一点上，托尼和他截然相反。
 
@@ -523,13 +531,14 @@ tags:
 
 所以警察在得知托尼意大利移民身份后，说他也是半个黑鬼。
 
-![img](https://imgsrc.baidu.com/baike/pic/item/9a504fc2d56285350792700b9eef76c6a7ef63ae.jpg)
+![img](http://upload-images.jianshu.io/upload_images/6943526-33a27f369a40a258.jpg?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
 
 唐·谢利虽然有着黑人的外表，但从小接受白人文化教育，让他在寻求身份认同时遇到了难题。
 
 当他弹钢琴时，白人欣赏他，当他离开钢琴，他在白人眼中就又变成了不值一文的黑人。
 
-![img](https://imgsrc.baidu.com/baike/pic/item/e4dde71190ef76c641a059019316fdfaaf5167ae.jpg)
+![image.png](https://upload-images.jianshu.io/upload_images/6943526-d20ba44c15a0a9b1.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
+
 
 南下路上，他遇到了很多黑人，侍者、劳工，唐·谢利和他们之间，同样隔着一堵墙。
 
@@ -543,7 +552,7 @@ tags:
 
 
 
-![img](https://imgsrc.baidu.com/baike/pic/item/8435e5dde71190ef935d30f5c01b9d16fdfa6072.jpg)
+![img](http://upload-images.jianshu.io/upload_images/6943526-97b552378f483615.jpg?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
 
 唐·谢利是企图融入白人文化语境并改变白人对黑人看法的黑人们的缩影，从他遇到的种种刁难不难看出，这样的方式行不通。
 
@@ -563,7 +572,8 @@ tags:
 
 再看结尾，避重就轻的其乐融融，只不过是**美国白人眼中“半个黑鬼”的意大利移民和黑人的“内部矛盾”得到消除了而已。**
 
-![img](https://imgsrc.baidu.com/baike/pic/item/730e0cf3d7ca7bcb94e06405b0096b63f624a805.jpg)
+![image.png](https://upload-images.jianshu.io/upload_images/6943526-c4defb60ffa003ec.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
+
 
 
 
@@ -597,7 +607,8 @@ tags:
 
 大家是相互看不上的。**唐有多瞧不起托尼的随便，托尼就有多瞧不起唐的扭捏。**但唐的涵养不会让他表露出过火的情绪，托尼的专业则让他做好了本分。
 
-![img](https://imgsrc.baidu.com/baike/pic/item/a8ec8a13632762d07fa50795aeec08fa513dc605.jpg)	
+![image.png](https://upload-images.jianshu.io/upload_images/6943526-80b259edec84ea75.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
+
 
 《绿皮书》很俏皮地让司机与雇主频频发生摩擦。不是针尖对麦芒的对峙，而是杂糅着挑衅、无奈、好奇与容忍，把彼此的“进犯”，转变为一种极富感染力的了解与接纳。
 
