--- a/_posts/2019-04-09-赵丽颖冯绍峰结婚：唐僧终于还是娶到了女儿国国王.md
+++ b/_posts/2019-04-09-赵丽颖冯绍峰结婚：唐僧终于还是娶到了女儿国国王.md
@@ -1,3 +1,16 @@
+---
+layout: post
+title: "唐僧终于还是娶到了女儿国国王"
+subtitle: "赵丽颖冯绍峰结婚啦~"
+date: 2019-04-08 
+author: "fsoooo"
+catalog: true
+tags:
+  - 偶像
+  - 随笔
+  - 爱情
+---
+
 早上刚到办公室，打开电脑时无意瞟见：颖宝晒结婚证了，我惊得鼠标脱离了我的桌面。 
 
 公开时间也是很浪漫，10月16日是赵丽颖的生日，10月7日是冯绍峰的生日，赵丽颖公布的时间是10:07。真的是太太太太太太太太太太太太太太太太太太太太太太太太太太太太太太太太太太太太太太太太太太太太太太太太太太太太太太太太太甜甜甜甜甜甜甜甜甜甜甜了！！！
