--- a/_posts/2019-04-09-远嫁的女儿，是父母丢失的孩子.md
+++ b/_posts/2019-04-09-远嫁的女儿，是父母丢失的孩子.md
@@ -1,5 +1,16 @@
-文章转载自简书用户  **【[醉里挑灯_观人观己](https://www.jianshu.com/u/c68346a4e772)】**
-#
+---
+layout: post
+title: "远嫁的女儿，是父母丢失的孩子"
+subtitle: "远嫁，意味着不留退路~"
+date: 2019-04-08 
+author: "fsoooo"
+catalog: true
+tags:
+  - 情感
+  - 随笔
+  - 社会
+---
+
 最近刷抖音时，刷到一个短视频：爸爸和不满一岁的女儿签协议 **`答应爸爸，以后绝对不会远嫁。`**虽然只有短短的几个字，却说出了千千万万个父亲想对自己女儿说的话！
 
 ![image](//upload-images.jianshu.io/upload_images/15749314-e231d04a90cf9c55?imageMogr2/auto-orient/strip%7CimageView2/2/w/413/format/webp)
