--- a/_posts/2019-04-09-造山、造水、造中华.md
+++ b/_posts/2019-04-09-造山、造水、造中华.md
@@ -1,4 +1,15 @@
-# 河南什么样，中国就是什么样
+---
+layout: post
+title: "造山、造水、造中华"
+subtitle: "河南什么样，中国就是什么样"
+date: 2019-04-09 
+author: "fsoooo"
+catalog: true
+tags:
+  - 历史
+  - 人文
+  - 地理
+---
 
 想要解答“什么是河南”是异常困难的。
 
