--- a/_posts/2019-04-09-长干行.md
+++ b/_posts/2019-04-09-长干行.md
@@ -1,4 +1,17 @@
-**长干行二首**
+---
+layout: post
+title: "长干行二首"
+subtitle: "青梅竹马，两小无猜"
+date: 2019-04-09 
+author: "fsoooo"
+catalog: true
+tags:
+  - 诗词
+  - 文学
+  - 爱情
+---
+
+****
 
 李白
 
