--- a/_posts/2019-04-10-最强反击！程序员注册996-ICU域名炮轰“996”工作制.md
+++ b/_posts/2019-04-10-最强反击！程序员注册996-ICU域名炮轰“996”工作制.md
@@ -1,3 +1,18 @@
+---
+layout: post
+title: "最强反击！程序员注册996-ICU域名炮轰“996”工作制"
+subtitle: "工作 996，生病 ICU ~”"
+date: 2019-04-10
+author: "fsoooo"
+catalog: true
+header-img: "img/post-bg-dreamer.jpg"
+header-mask: 0.4
+tags:
+  - 程序员
+  - 吐槽
+  - 职场
+---
+
 > 本文转载自：微信公众号【51CTO】
 
 “在互联网公司之中，实行“996 工作制”几乎成为默认标配，在去年的年会中，有赞 CEO 白鸦将这种企业文化公开的在公司年会提出、并被广泛地传播出来，撕掉了互联网企业因焦虑而追赶的遮羞布。
