--- a/_posts/2019-05-07-谢谢《复联4》，你让苦逼的成年人还相信童话.md
+++ b/_posts/2019-05-07-谢谢《复联4》，你让苦逼的成年人还相信童话.md
@@ -546,9 +546,7 @@ tags:
 
 **给几十亿人制造快乐的漫画家，何尝不是不可思议的超级英雄。**
 
-Marvel, is for you.
-
- 👩🏻‍💻  💬  👨🏻‍💻 
+**`Marvel, is for you.`**
 
 **11年，22部电影，手造一个瑰丽的梦。**
 
