--- a/_posts/2019-04-06-灭霸毁灭宇宙一半生命的计划正确吗？.md
+++ b/_posts/2019-04-06-灭霸毁灭宇宙一半生命的计划正确吗？.md
@@ -1,3 +1,16 @@
+---
+layout: post
+title: "灭霸毁灭宇宙一半生命的计划正确吗？"
+subtitle: "灭霸他主要的问题在于--没有文化。"
+date: 2019-04-05 
+author: "fsoooo"
+catalog: true
+tags:
+  - 电影
+  - 随笔
+  - 漫威
+---
+
 三月份看了漫威出品的《惊奇队长》，据说推出这部片的目的是给即将在四月份上映的《复仇者联盟4》打前站。毕竟在复联3中，大boss灭霸吊打一众复仇者，一个响指毁灭了宇宙中一半的生命。
 这就引出一个问题：[灭霸毁灭宇宙一半生命的计划正确吗？](https://www.zhihu.com/question/276962225/answer/399926305)
 
