--- a/_posts/2019-04-06-红颜弹指老，刹那芳华.md
+++ b/_posts/2019-04-06-红颜弹指老，刹那芳华.md
@@ -1,3 +1,19 @@
+---
+layout: post
+title: "红颜弹指老，刹那芳华"
+subtitle: "我走过山的时候山不说话，我路过海的时候海不说话； 
+           我坐着的毛驴一步一步滴滴答答，我带着的倚天喑哑。
+           大家说我因为爱着杨过大侠，找不到所以在峨嵋安家；
+           其实我只是喜欢峨嵋的雾，像十六岁那年绽放的烟花。"
+date: 2019-04-05
+author: "fsoooo"
+catalog: true
+tags:
+  - 情感
+  - 随笔
+  - 金庸
+---
+
 我走过山的时候山不说话，我路过海的时候海不说话；
 
 我坐着的毛驴一步一步滴滴答答，我带着的倚天喑哑。
