--- a/_posts/2019-04-06-蓦然回首的灯火阑珊.md
+++ b/_posts/2019-04-06-蓦然回首的灯火阑珊.md
@@ -1,7 +1,15 @@
-# 中国今年最极致的浪漫，刚刚结束了……
-
->本文授权转载于微信公众号：【[寻匠之美](ID：xjzm681，作者：寻匠之美)】
-
+---
+layout: post
+title: "蓦然回首的灯火阑珊~"
+subtitle: "中国今年最极致的浪漫，刚刚结束了……"
+date: 2019-04-06 
+author: "fsoooo"
+catalog: true
+tags:
+  - 诗词
+  - 文学
+  - 历史
+---
 
 
 连续两晚的**“紫禁城上元夜”**
