--- a/_posts/2019-04-06-那些诗词中寄托的哀思.md
+++ b/_posts/2019-04-06-那些诗词中寄托的哀思.md
@@ -1,3 +1,17 @@
+---
+layout: post
+title: "那些诗词里寄托的哀思~"
+subtitle: "梦里不知身是客，一晌贪欢。"
+date: 2019-04-06 
+author: "fsoooo"
+catalog: true
+tags:
+  - 诗词
+  - 文学
+  - 情感
+  - 追忆
+---
+
 ###### 江城子 乙卯正月二十日夜记梦
 
 【宋】苏 轼
