--- a/_posts/2019-04-06-黑洞是个什么洞？.md
+++ b/_posts/2019-04-06-黑洞是个什么洞？.md
@@ -1,4 +1,15 @@
->文章来源：微信公众号 **混子曰（ID:hey-stone）**
+---
+layout: post
+title: "黑洞是个什么洞？"
+subtitle: "号外!人类史上首张黑洞照片面世了~"
+date: 2019-04-06 
+author: "fsoooo"
+catalog: true
+tags:
+  - 科普
+  - 分享
+---
+
 
 ![](https://upload-images.jianshu.io/upload_images/6943526-b8a25d63a28f68e0.jpg?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
 
