--- a/_posts/2019-04-07-人间正道是沧桑.md
+++ b/_posts/2019-04-07-人间正道是沧桑.md
@@ -1,4 +1,15 @@
-文章转载自简书用户  **【[醉里挑灯_观人观己](https://www.jianshu.com/u/c68346a4e772)】**
+---
+layout: post
+title: "人间正道是沧桑"
+subtitle: "为有牺牲多壮志，敢叫日月换新天。忽报人间曾伏虎，万里长空且为忠魂舞。萧瑟秋风今又是，换了人间。"
+author: "fsoooo"
+date: 2019-04-07
+catalog: true
+tags:
+  - 历史
+  - 伟人
+  - 中国
+---
 
 历史会记住，有这样一个中国人，他出生之时，这个民族正面临数千年来未有之屈辱，这个国家正蒙受历时百年的苦难和灾祸：
 
