--- a/_posts/2019-04-07-让你人生瞬间豁然开朗的36个神回答.md
+++ b/_posts/2019-04-07-让你人生瞬间豁然开朗的36个神回答.md
@@ -1,6 +1,15 @@
-#####做一件事并不是因为它简单，而是因为它是否值得。
-
->**来源 | 读者，人民日报微博**
+---
+layout: post
+title: "让你人生豁然开朗的36个神回答~"
+subtitle: "做一件事并不是因为它简单，而是因为它是否值得。"
+author: "fsoooo"
+date: 2019-04-08
+tags:
+  - 分享
+  - 随笔
+  - 修行
+  - 人生
+---
 
 ![](https://upload-images.jianshu.io/upload_images/6943526-7339ebbe1cfb26b5.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
 
