--- a/_posts/2019-04-09-一生温暖纯良，不舍爱与自由.md
+++ b/_posts/2019-04-09-一生温暖纯良，不舍爱与自由.md
@@ -1,3 +1,15 @@
+---
+layout: post
+title: "“一生温暖纯良，不舍爱与自由”"
+subtitle: "一生温暖纯良，是一生的修行，劝别人善良，也希望自己一直善良。"
+author: "fsoooo"
+date: 2019-04-08
+tags:
+  - 品格
+  - 随笔
+  - 修行
+---
+
 最近看奇葩说的时候，很喜欢陈铭老师在奇葩说第五季里说的一段话，他说：“一生温暖纯良，不舍爱与自由，我在那个时候才意识到，前一句是后一句话的前提，一个人，只有温暖纯良了，才可以有资格谈论爱与自由。否则，**自由，多少罪恶假汝之名**。
 
 **“一生温暖纯良，不舍爱与自由”**
