--- a/_posts/2019-04-09-中国的十二时辰，中国人的一天.md
+++ b/_posts/2019-04-09-中国的十二时辰，中国人的一天.md
@@ -1,5 +1,16 @@
-> 本文授权转载于微信公众号：**【[寻匠之美](ID：xjzm681  作者：陈浩)】**
-
+---
+layout: post
+title: "中国的十二时辰，中国人的一天~"
+subtitle: "子、 丑、寅、卯、辰、巳、午、未、申、酉、辛、亥十二个时辰,每个时辰相当于现在的两个小时。"
+date: 2019-04-08 
+author: "fsoooo"
+catalog: true
+tags:
+  - 历史
+  - 国学
+  - 读书
+  - 中国
+---
 
 
 一个时辰称为一个大时，
