--- a/_posts/2019-04-09-人生中不可或缺的快意潇洒！.md
+++ b/_posts/2019-04-09-人生中不可或缺的快意潇洒！.md
@@ -1,3 +1,16 @@
+---
+layout: post
+title: "人生中不可或缺的快意潇洒"
+subtitle: "天下风云出我辈，一入江湖岁月催，皇图霸业谈笑中，不胜人生一场醉。"
+date: 2019-04-08 
+author: "fsoooo"
+catalog: true
+tags:
+  - 江湖
+  - 随笔
+  - 修行
+---
+
 #### 人生江湖
 
 徐克、程小东的电影《东方不败之风云再起》中有这样一首诗，描写的是世事风云巨变，我辈皆是英雄，在达到曾经梦寐以求的欲望之后，才意识到黄图霸业不过是贪欢一晌，不如知己一人、醉一场那样烦恼尽消。电影只引用前四句，其实这首诗出自李白的《人生江湖》
