--- a/_posts/2019-04-09-人生有标准答案吗？.md
+++ b/_posts/2019-04-09-人生有标准答案吗？.md
@@ -1,3 +1,16 @@
+---
+layout: post
+title: "人生有标准答案吗？"
+subtitle: "“一千个读者，一千个哈姆雷特”"
+date: 2019-04-08 
+author: "fsoooo"
+catalog: true
+tags:
+  - 读书
+  - 随笔
+  - 分享
+---
+
 最近，一则新闻引起了我的注意，“**高二语文阅读理解原作者20分只得6分**”。
 
 好奇之下，我查了事情的原委。
