--- a/_posts/2019-04-09-原来真的有天使在人间.md
+++ b/_posts/2019-04-09-原来真的有天使在人间.md
@@ -1,3 +1,17 @@
+---
+layout: post
+title: "原来真的有天使在人间~"
+subtitle: "每个人来到世间都有她的意义~"
+date: 2019-04-08 
+author: "fsoooo"
+catalog: true
+tags:
+  - 品格
+  - 随笔
+  - 亲情
+  - 修行
+---
+
 今天在微信上看了一篇文章，一个大老爷们，差点憋不住眼泪！！年纪大了，眼睛就容易进挖掘机…
 #
 每个人来到世间都有她的意义，原来真的有天使在人间。
