--- a/_posts/2019-04-09-只愿你被这世界温柔相待.md
+++ b/_posts/2019-04-09-只愿你被这世界温柔相待.md
@@ -1,3 +1,26 @@
+---
+layout: post
+title: "只愿你被这世界温柔相待~"
+subtitle: "特喜欢村上春树一句话：
+           不必太纠结于当下，
+           也不必太忧虑未来，
+           当你经历过一些事情的时候，
+           眼前的风景已经和从前不一样了，
+           哪里会有人喜欢孤独，
+           不过是不喜欢失望，
+           愿你遇到一个成熟的爱人，
+           一辈子不用长大。"
+date: 2019-04-08 
+author: "fsoooo"
+catalog: true
+tags:
+  - 人生
+  - 文学
+  - 随笔
+  - 情感
+---
+
+
 愿你一生努力 
 一生被爱 
 想要的都拥有 
