--- a/_posts/2019-04-09-向阳而生，选择善良.md
+++ b/_posts/2019-04-09-向阳而生，选择善良.md
@@ -1,4 +1,18 @@
-####我为什么喜欢杨超越和赖美云？
+---
+layout: post
+title: "我为什么喜欢杨超越和赖美云？"
+subtitle: "“有人哭，有人笑，有人不看好，有人嘲弄，也有人感动”"
+date: 2019-04-09
+author: "fsoooo"
+catalog: true
+tags:
+  - 青春
+  - 随笔
+  - 品格
+  - 修身
+---
+
+我为什么喜欢杨超越和赖美云？
 
 因为我们有良心。
 
