--- a/_posts/2019-04-09-巫山云雨的前世今生.md
+++ b/_posts/2019-04-09-巫山云雨的前世今生.md
@@ -1,4 +1,16 @@
-##巫山云雨咋就成了男女欢爱代称的？
+---
+layout: post
+title: "巫山云雨咋就成了男女欢爱代称的？"
+subtitle: "“一枝农艳露凝香，云雨巫山枉断肠；借问汉宫谁得似？可伶飞燕倚新妆。”"
+date: 2019-04-08 
+author: "fsoooo"
+catalog: true
+tags:
+  - 科普
+  - 历史
+  - 随笔
+---
+
 
 古人描绘男欢女爱的词语很多，如 `“房事”、“交媾”、“敦伦”、“苟合”、“入巷”、“云雨”`等，但“云雨”一词用得最多。
 
