--- a/_posts/2019-04-09-自知者明，脚踏实地.md
+++ b/_posts/2019-04-09-自知者明，脚踏实地.md
@@ -1,3 +1,17 @@
+---
+layout: post
+title: "自知者明，脚踏实地"
+subtitle: "南怀瑾说，人有三个基本错误不能犯：“一是德薄而位尊，二是智小而谋大，三是力小而任重。”"
+date: 2019-04-09
+author: "fsoooo"
+catalog: true
+tags:
+  - 品格
+  - 随笔
+  - 读书
+  - 修身
+---
+
 “自知者明”，典出《道德经》，很多道理，说着容易，做到却很难，人非圣贤，连李世民都需要魏征这面镜子才能做到自知。
 
  
