--- a/_posts/2019-04-05-河南将去往何方？.md
+++ b/_posts/2019-04-05-河南将去往何方？.md
@@ -1,7 +1,15 @@
-
-> 文章来源于[星球研究所](https://www.zhihu.com/people/xing-qiu-yan-jiu-suo)：一群国家地理控，专注于探索极致世界。
-
-
+---
+layout: post
+title: "河南将去往何方？"
+subtitle: "河南对自己的未来都是迷茫的~"
+date: 2019-04-09 
+author: "fsoooo"
+catalog: true
+tags:
+  - 历史
+  - 人文
+  - 地理
+---
 
 ![image](http://upload-images.jianshu.io/upload_images/6943526-d122f4eca632fcd7.jpg?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
 
