--- a/_posts/2019-04-05-河山大好，出去走走.md
+++ b/_posts/2019-04-05-河山大好，出去走走.md
@@ -1,3 +1,19 @@
+---
+layout: post
+title: "河山大好，出去走走"
+subtitle: "寻一个春暖花开的日子，出去走走
+           抛开尘世的烦恼
+           没有浮华，没有牵绊
+           只为找寻心灵深处的那份静谧"
+date: 2019-04-05 
+author: "fsoooo"
+catalog: true
+tags:
+  - 音乐
+  - 许嵩
+  - 旅行
+---
+
 喜欢了许嵩好多年，最近又拾起了许嵩的音乐，一首《河山大好》把我的思绪拉远...
 ![](https://upload-images.jianshu.io/upload_images/6943526-0ccdb8a6e20320df.jpg?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
 
