--- a/_posts/2019-04-05-父亲写的散文诗.md
+++ b/_posts/2019-04-05-父亲写的散文诗.md
@@ -1,3 +1,17 @@
+---
+layout: post
+title: "父亲写的散文诗"
+subtitle: "这是那一辈人留下的足迹，几场风雨后就要抹去了痕迹， 这片土地曾让我泪流不止，埋葬了多少人心酸的往事"
+date: 2019-04-05 
+author: "fsoooo"
+catalog: true
+tags:
+  - 父亲
+  - 岁月
+  - 感情
+  - 随笔
+---
+
 ![u=2168663648,673615727&fm=173&app=25&f=JPEG.jpg](https://upload-images.jianshu.io/upload_images/6943526-f473abbec83f6ba8.jpg?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
 
 这世界已经很少东西可以让我哭了，直到听过李健版《父亲写的散文诗》。许飞版的，以前听的时候，有触动，但没有这么深刻。《父亲的散文诗》经过李健演绎后，赋予这首歌更多的内涵。
