--- a/_posts/2019-04-05-父母的格局，对孩子成长有多重要？.md
+++ b/_posts/2019-04-05-父母的格局，对孩子成长有多重要？.md
@@ -1,3 +1,17 @@
+---
+layout: post
+title: "父母的格局，对孩子的成长有多重要？"
+subtitle: "格局就是一个人的眼光、胸襟、胆识等心理要素的内在布局。"
+date: 2019-04-05 
+author: "fsoooo"
+catalog: true
+tags:
+  - 人生
+  - 品格
+  - 修行
+  - 格局
+---
+
 我们常常提到格局，到底什么是格局？
 
 **格局就是一个人的眼光、胸襟、胆识等心理要素的内在布局。**
