--- a/_posts/2019-04-06-你懂我的苦，我知你的好.md
+++ b/_posts/2019-04-06-你懂我的苦，我知你的好.md
@@ -1,3 +1,16 @@
+---
+layout: post
+title: "你知我的苦，我懂你的好~"
+subtitle: "“不合时宜，唯有朝云能识我；独弹古调，每逢暮雨倍思卿”"
+date: 2019-04-05
+author: "fsoooo"
+catalog: true
+tags:
+  - 情感
+  - 随笔
+  - 历史
+---
+
 苏轼曾因在诗词中畅论政见，得罪了当朝权贵，几度遭贬，内心忧闷。
 
 一日苏轼退朝回家，饭后捧着肚子慢走，对着众姬妾问道：“你们说，我这肚子里装的是什么？”
