--- a/_posts/2019-04-06-林深时见鹿.md
+++ b/_posts/2019-04-06-林深时见鹿.md
@@ -1,3 +1,16 @@
+---
+layout: post
+title: "林深时见鹿"
+subtitle: "人说，林深时见鹿，海蓝时见鲸，梦醒时见你。"
+date: 2019-04-05 
+author: "fsoooo"
+catalog: true
+tags:
+  - 随笔
+  - 分享
+  - 读书
+---
+
 # 林深时见鹿
 
 人说，林深时见鹿，海蓝时见鲸，梦醒时见你。
