--- a/_posts/2019-04-06-每一个你回家的日子，都是父母的节日.md
+++ b/_posts/2019-04-06-每一个你回家的日子，都是父母的节日.md
@@ -1,4 +1,16 @@
-### 每一个你回家的日子，都是父母的节日。
+---
+layout: post
+title: " 每一个你回家的日子，都是父母的节日"
+subtitle: "“愿你成长的速度，快过父母老去的速度。”父母在，人生尚有来处；双亲去，此生只剩归途"
+date: 2019-04-05 
+author: "fsoooo"
+catalog: true
+tags:
+  - 亲情
+  - 随笔
+  - 岁月
+  - 人生
+---
 
 **谁的家里没有等待着自己的父母？**
 
