--- a/_posts/2019-04-06-济水释源.md
+++ b/_posts/2019-04-06-济水释源.md
@@ -1,4 +1,16 @@
-# 济水释源
+---
+layout: post
+title: "济水释源"
+subtitle: "我的家乡济源，是中国古代的五岳四渎之济水的发源地"
+date: 2019-04-08 
+author: "fsoooo"
+catalog: true
+tags:
+  - 历史
+  - 科普
+  - 读书
+  - 中国
+---
 
 中国古代有五岳四渎，代表着山川河流，从周朝开始，五岳四渎就作为河川的代表，由君王来祭祀。
 
