--- a/_posts/2019-04-06-浅谈三十而立.md
+++ b/_posts/2019-04-06-浅谈三十而立.md
@@ -1,3 +1,17 @@
+---
+layout: post
+title: "浅谈三十而立"
+subtitle: "“吾十有五，而志于学。三十而立。四十而不惑。五十而知天命。六十而耳顺。七十而从心所欲，不逾矩。”"
+date: 2019-04-05 
+author: "fsoooo"
+catalog: true
+tags:
+  - 修行
+  - 随笔
+  - 品格
+  - 人生
+---
+
 **子曰：“三十而立”。**
 在《论语·为政》中有这么几句：“吾十有五，而志于学。三十而立。四十而不惑。五十而知天命。六十而耳顺。七十而从心所欲，不逾矩。”
 
