--- a/_posts/2019-02-25-JSONP跨域总结.md
+++ b/_posts/2019-02-25-JSONP跨域总结.md
@@ -1,3 +1,15 @@
+---
+layout: post
+title: "JSONP跨域总结"
+date: 2019-03-26 
+author: "fsoooo"
+catalog: true
+tags:
+  - Web
+  - Jsonp
+  - 总结
+---
+
 ### 什么是跨域
 
 - 请求协议（`http,https`）不同
