--- a/_posts/2019-03-26-我为什么使用PhpStorm.md
+++ b/_posts/2019-03-26-我为什么使用PhpStorm.md
@@ -1,4 +1,16 @@
-## PhpStorm-让开发更智能
+---
+layout: post
+title: "我为什么使用PhpStorm?"
+subtitle: "PhpStorm-让开发更智能"
+date: 2019-03-26 
+author: "fsoooo"
+catalog: true
+tags:
+  - 编程
+  - PHP
+  - 工具
+  - 效率
+---
 
 **PhpStorm** 是 **JetBrains** 公司开发的一款商业的（**收费的，不过有破解版**） PHP 集成开发工具。PhpStorm可随时帮助用户对其编码进行调整，运行单元测试或者提供可视化debug功能和智能HTML/CSS/JavaScript/PHP编辑、代码质量分析、版本控制集成（SVN、GIT）、调试和测试等功能。另外，它还是跨平台，在Windows和MacOS下都可以使用。——引用字百度百科
 
