--- a/_posts/2019-03-29-2018年度总结.md
+++ b/_posts/2019-03-29-2018年度总结.md
@@ -1,3 +1,17 @@
+---
+layout: post
+title: "2018，年度总结"
+subtitle: "我自己很平凡，正是因为平凡，所以才不断提醒自己，以谦卑的姿态，不断去总结和成长。以更理性的姿态去思考，我要做一个什么样的人，然后努力去靠近。"
+date: 2019-03-29 
+author: "fsoooo"
+catalog: true
+tags:
+  - 成长
+  - 总结
+  - 时间
+  - 2018
+---
+
 跨年的钟声仿佛还在耳边回响，笔记本上的日期写的还是2018。微微一怔，划掉，郑重地写上2019。
 
 2018已经成为过去，现在已经是2019年了。不知你生命中是否有过这种感觉，随着年龄的增长越发觉得时间过得如同白驹过隙？恍惚中2018已经成为过去，恍惚中迎来了2019年。正如孔子所说：逝者如斯夫，不舍昼夜。
