--- a/_posts/2019-03-29-2018最佳微小说.md
+++ b/_posts/2019-03-29-2018最佳微小说.md
@@ -1,3 +1,14 @@
+---
+layout: post
+title: "2018最佳微小说"
+subtitle: "微小说反映大时代~"
+date: 2019-05-07 
+author: "fsoooo"
+catalog: true
+tags:
+  - 分享
+  - 随笔
+---
 
 古代有一小姐，遇到一个上京赶考的穷书生避雨，发现其很有才华后以身相许。次日小姐垂泪送书生：“君若高中莫负妾身。”书生发誓后，带着姑娘给的银子走了。小姐让丫环把书生的名字纪录在册，丫头说：“这已经是第五十个书生了！”小姐说：“没办法，总有一个会真的考上的”。 ——2018最佳微小说《**风投**》
 
