--- a/_posts/2019-03-29-《水性江南》.md
+++ b/_posts/2019-03-29-《水性江南》.md
@@ -1,3 +1,16 @@
+---
+layout: post
+title: "想起《水性江南》"
+subtitle: "初中时背的一篇语文阅读理解~"
+date: 2019-04-04 
+author: "fsoooo"
+catalog: true
+tags:
+  - 岁月
+  - 读书
+  - 随笔
+---
+
 今天偶然间想起了上初中时背的一篇语文阅读理解文章《水性江南》。上网找了一下，发现百度词条都是问阅读理解答案的。犹记得，上学时语文老师对这篇文章非常赞赏，要求我们全文背诵，以至于后来高中写作文时我还经常使用文章里的句子。如今再看这篇文章，感觉还是特别得熟悉，读了几遍之后，还是可以背诵下来的。好想念我的老师和同学们！
 
 下面这篇文章用来纪念逝去的青葱岁月。
