--- a/_posts/2019-03-29-《阿甘正传》--不舍爱与自由.md
+++ b/_posts/2019-03-29-《阿甘正传》--不舍爱与自由.md
@@ -1,3 +1,16 @@
+---
+layout: post
+title: "重温《阿甘正传》"
+subtitle: "电影总是在怀揣某种情怀的时候最能引起共鸣。"
+date: 2019-05-07 
+author: "fsoooo"
+catalog: true
+tags:
+  - 电影
+  - 随笔
+  - 品格
+---
+
 最近一直在回味高晓松写给女儿的一句话：**愿你一生温暖纯良，不舍爱与自由。**电影总是在怀揣某种情怀的时候最能引起共鸣，今天想说的是《阿甘正传》，和肖申克同一时期的电影，基调截然不同，但相同的是总有一剂温暖注入心肺。
 
 ![image.png](https://upload-images.jianshu.io/upload_images/6943526-e948802970428cf0.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
