--- a/_posts/2019-04-05-从1919到2019：在巴黎见证中国.md
+++ b/_posts/2019-04-05-从1919到2019：在巴黎见证中国.md
@@ -1,6 +1,20 @@
-> 本文转载自：微信公众号【青春北京】 作者：锦鲤的师兄
-
- 
+---
+layout: post
+title: "从1919到2019：在巴黎见证中国"
+subtitle: "1919年，巴黎和会，
+           中国作为战胜国被列强瓜分和出卖；
+           2019年，还是在巴黎，
+           中国收获同一批“列强”的热情合作。
+           也不过，就是一百年；
+           正恰好，刚刚一百年。"
+author: "fsoooo"
+date: 2019-04-01
+catalog: true
+tags:
+  - 历史
+  - 时间
+  - 中国
+---
 
 > **1919年，巴黎和会，**
 >
