--- a/_posts/2019-04-05-大曾的画与诗.md
+++ b/_posts/2019-04-05-大曾的画与诗.md
@@ -1,4 +1,15 @@
->来源：大曾涂鸦
+---
+layout: post
+title: "大曾的画与诗"
+subtitle: "大曾画画：白袍红冠气若仙， 好随闲云戏蓝天。 偶作人间不速客， 只落青山碧水间。"
+date: 2019-04-02 
+author: "fsoooo"
+catalog: true
+tags:
+  - 分享
+  - 读书
+  - 随笔
+---
 
 **大曾，曾初良，也乐斋主，湖南湘乡人，六十年代人。喜作文人画，常题打油诗，不求功与名，但得趣与乐**
 
